--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -3,12 +3,28 @@
 \usepackage{multicol}
 \usepackage{lipsum}% dummy text
 \usepackage{amsmath}
+\usepackage[compact]{titlesec}
 
 \setlength{\columnseprule}{0.4pt}
 
 \begin{document}
 \begin{multicols}{3}
 
+    \section*{Test 1}
+    \subsection*{asdfasd}
+    asdfasdfasdf
+    \subsection*{asdfasd}
+    asdfasdfasdf
+    \subsection*{asdfasd}
+    asdfasdfasdf
+
+    \section*{Test 2}
+    \subsection*{asdfasd}
+    asdfasdfasdf
+    \subsection*{asdfasd}
+    asdfasdfasdf
+    \subsection*{asdfasd}
+    asdfasdfasdf
 
 \end{multicols}
 \end{document}
